--- a/index.ipynb
+++ b/index.ipynb
@@ -102,6 +102,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def y_values_for_at_one(x_values):\n",
+    "    return three_x_y_at_one(zero_to_ten)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": true
@@ -112,7 +122,7 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return = three_x_y_at_one(zero_to_ten)\n",
+    "    return three_x_y_at_one(zero_to_ten)\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
     "    pass\n",
