--- a/index.ipynb
+++ b/index.ipynb
@@ -102,12 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-7502c28400c7>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-7502c28400c7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print three_x_y_at_one(zero_to_ten)\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def y_values_for_at_one(x_values):\n",
-    "    return three_x_y_at_one(zero_to_ten)\n"
+    "    return three_x_y_at_one(zero_to_ten)\n",
+    "print three_x_y_at_one(zero_to_ten)"
    ]
   },
   {
