--- a/index.ipynb
+++ b/index.ipynb
@@ -116,8 +116,8 @@
    ],
    "source": [
     "def y_values_for_at_one(x_values):\n",
-    "    y_values_for_at_one=three_x_y_at_one\n",
-    "    return three_x_y_at_one(zero_to_ten)"
+    "    \n",
+    "    return "
    ]
   },
   {
