--- a/index.ipynb
+++ b/index.ipynb
@@ -117,7 +117,7 @@
    "source": [
     "def y_values_for_at_one(x_values):\n",
     "    for x_value in x_values\n",
-    "    y\n",
+    "    y_values_for_at_one= ()\n",
     "    return "
    ]
   },
