--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
    ],
    "source": [
     "def y_values_for_at_one(x_values):\n",
-    "    lambda(x_value:)"
+    "    lambda(x_value: three_)"
    ]
   },
   {
