--- a/index.ipynb
+++ b/index.ipynb
@@ -115,8 +115,9 @@
     }
    ],
    "source": [
+    "zero_to_ten = list(range(0, 11))\n",
     "def y_values_for_at_one(x_values):\n",
-    "    lambda(x_value: three_x_y_at_one(x_value))"
+    "    list(lambda(x_value: three_x_y_at_one(x_value),zero_to_ten))"
    ]
   },
   {
