--- a/index.ipynb
+++ b/index.ipynb
@@ -102,22 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-7502c28400c7>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-6-2c48b5e3015a>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-7502c28400c7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print three_x_y_at_one(zero_to_ten)\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-2c48b5e3015a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    list(lambda(x_value: three_x_y_at_one(x_value),zero_to_ten))\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "def y_values_for_at_one(x_values):\n",
-    "    list(lambda(x_value: three_x_y_at_one(x_value),zero_to_ten))"
+    "    list(map(lambda(x_value: three_x_y_at_one(x_value),zero_to_ten))"
    ]
   },
   {
