--- a/index.ipynb
+++ b/index.ipynb
@@ -102,22 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-2c48b5e3015a>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-2c48b5e3015a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    list(lambda(x_value: three_x_y_at_one(x_value),zero_to_ten))\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "def y_values_for_at_one(x_values):\n",
-    "    list(map(lambda(x_value: three_x_y_at_one(x_value),zero_to_ten))"
+    "    list(lambda x_value: three_x_y_at_one(x_value),zero_to_ten)\n",
+    "print"
    ]
   },
   {
