--- a/index.ipynb
+++ b/index.ipynb
@@ -102,14 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(y_values_for_at_one)? (<ipython-input-11-9ac05d1bdd45>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-9ac05d1bdd45>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print y_values_for_at_one\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(y_values_for_at_one)?\n"
+     ]
+    }
+   ],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "def y_values_for_at_one(x_values):\n",
-    "    list(lambda x_value: three_x_y_at_one(x_value),zero_to_ten)\n",
-    "print"
+    "    return list(lambda x_value: three_x_y_at_one(x_value),zero_to_ten)\n",
+    "print y_values_for_at_one"
    ]
   },
   {
