Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,23 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(y_values_for_at_one)? (<ipython-input-11-9ac05d1bdd45>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-9ac05d1bdd45>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print y_values_for_at_one\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(y_values_for_at_one)?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return list(lambda x_value: three_x_y_at_one(x_value),zero_to_ten)\n",
-    "print y_values_for_at_one"
+    "    return list(lambda x_value: three_x_y_at_one(x_value),zero_to_ten)"
    ]
   },
   {
@@ -144,6 +134,13 @@
     "def y_values_for_at_nine(x_values):\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
