Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,6 +113,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print y_values_for_at_one ()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": true
@@ -134,13 +143,6 @@
     "def y_values_for_at_nine(x_values):\n",
     "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
