--- a/index.ipynb
+++ b/index.ipynb
@@ -113,11 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function y_values_for_at_one at 0x7f388c03e488>\n"
+     ]
+    }
+   ],
    "source": [
-    "print y_values_for_at_one ()"
+    "print (y_values_for_at_one)"
    ]
   },
   {
