Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,19 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<function y_values_for_at_one at 0x7f388c03e488>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print (y_values_for_at_one)"
+    "type (y_values_for_at_one)"
    ]
   },
   {
