--- a/index.ipynb
+++ b/index.ipynb
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return list(map(lambda x_value: three_x_y_at_one(x_value),zero_to_ten))"
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))"
    ]
   },
   {
