--- a/index.ipynb
+++ b/index.ipynb
@@ -102,17 +102,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zero_to_ten = list(range(0, 11))\n",
-    "def y_values_for_at_one(x_values):\n",
-    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": true
@@ -123,16 +112,16 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return three_x_y_at_one(zero_to_ten)\n",
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    pass\n",
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
-    "    pass\n",
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    pass"
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))"
    ]
   },
   {
