--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -102,8 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
@@ -113,31 +115,22 @@
     "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return list(map(lambda x_value: three_x_y_at_three(x_value),x_values))\n",
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
-    "    return list(map(lambda x_value: three_x_y_at_six(x_value),x_values))\n",
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return list(map(lambda x_value: three_x_y_at_nine(x_value),x_values))"
+    "    return list(map(lambda x_value: three_x_y_at_one(x_value),x_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "y_values_for_at_one(zero_to_four) # [0, 3, 6, 9, 12]\n",
     "y_values_for_at_one(zero_to_ten) # [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
