--- a/index.ipynb
+++ b/index.ipynb
@@ -161,22 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from graph import trace_values\n",
     "\n",
@@ -191,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -211,9 +198,11 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=1",
          "text": [],
+         "type": "scatter",
+         "uid": "e2fbf65c-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -227,12 +216,26 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          3,
+          6,
+          9,
+          12,
+          15,
+          18,
+          21,
+          24,
+          27,
+          30
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=3",
          "text": [],
+         "type": "scatter",
+         "uid": "e2fbf7ce-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -246,12 +249,26 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          9,
+          18,
+          27,
+          36,
+          45,
+          54,
+          63,
+          72,
+          81,
+          90
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=6",
          "text": [],
+         "type": "scatter",
+         "uid": "e2fbf86e-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -265,12 +282,26 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          18,
+          36,
+          54,
+          72,
+          90,
+          108,
+          126,
+          144,
+          162,
+          180
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=9",
          "text": [],
+         "type": "scatter",
+         "uid": "e2fbf8f0-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -284,7 +315,19 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          27,
+          54,
+          81,
+          108,
+          135,
+          162,
+          189,
+          216,
+          243,
+          270
+         ]
         }
        ],
        "layout": {
@@ -292,10 +335,10 @@
        }
       },
       "text/html": [
-       "<div id=\"b9f28f7d-614c-457b-a33a-f3f647415c1f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b9f28f7d-614c-457b-a33a-f3f647415c1f\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"749dfa86-fb9f-4e68-a253-961da2b5e9ae\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"749dfa86-fb9f-4e68-a253-961da2b5e9ae\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30], \"type\": \"scatter\", \"uid\": \"e3012e56-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90], \"type\": \"scatter\", \"uid\": \"e3012ffa-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180], \"type\": \"scatter\", \"uid\": \"e30130e0-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270], \"type\": \"scatter\", \"uid\": \"e30131b2-7527-11e9-8fe3-d33e8ca318a5\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"b9f28f7d-614c-457b-a33a-f3f647415c1f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b9f28f7d-614c-457b-a33a-f3f647415c1f\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"749dfa86-fb9f-4e68-a253-961da2b5e9ae\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"749dfa86-fb9f-4e68-a253-961da2b5e9ae\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30], \"type\": \"scatter\", \"uid\": \"e3012e56-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90], \"type\": \"scatter\", \"uid\": \"e3012ffa-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180], \"type\": \"scatter\", \"uid\": \"e30130e0-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270], \"type\": \"scatter\", \"uid\": \"e30131b2-7527-11e9-8fe3-d33e8ca318a5\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -347,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -355,9 +398,11 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=1",
          "text": [],
+         "type": "scatter",
+         "uid": "e9cc54ea-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -371,12 +416,26 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          3,
+          6,
+          9,
+          12,
+          15,
+          18,
+          21,
+          24,
+          27,
+          30
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=3",
          "text": [],
+         "type": "scatter",
+         "uid": "e9cc574c-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -390,12 +449,26 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          9,
+          18,
+          27,
+          36,
+          45,
+          54,
+          63,
+          72,
+          81,
+          90
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=6",
          "text": [],
+         "type": "scatter",
+         "uid": "e9cc58f0-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -409,12 +482,26 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          18,
+          36,
+          54,
+          72,
+          90,
+          108,
+          126,
+          144,
+          162,
+          180
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=9",
          "text": [],
+         "type": "scatter",
+         "uid": "e9cc5a1c-7527-11e9-8fe3-d33e8ca318a5",
          "x": [
           0,
           1,
@@ -428,7 +515,19 @@
           9,
           10
          ],
-         "y": null
+         "y": [
+          0,
+          27,
+          54,
+          81,
+          108,
+          135,
+          162,
+          189,
+          216,
+          243,
+          270
+         ]
         }
        ],
        "layout": {
@@ -436,10 +535,10 @@
        }
       },
       "text/html": [
-       "<div id=\"eca262a6-80f6-415b-bf1b-0ddac49dc241\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"eca262a6-80f6-415b-bf1b-0ddac49dc241\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c9c13810-e18c-498e-8d72-9bd4d496436a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c9c13810-e18c-498e-8d72-9bd4d496436a\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30], \"type\": \"scatter\", \"uid\": \"e9d1b9f8-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90], \"type\": \"scatter\", \"uid\": \"e9d1bb4c-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180], \"type\": \"scatter\", \"uid\": \"e9d1bbe2-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270], \"type\": \"scatter\", \"uid\": \"e9d1bc64-7527-11e9-8fe3-d33e8ca318a5\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"eca262a6-80f6-415b-bf1b-0ddac49dc241\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"eca262a6-80f6-415b-bf1b-0ddac49dc241\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c9c13810-e18c-498e-8d72-9bd4d496436a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c9c13810-e18c-498e-8d72-9bd4d496436a\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30], \"type\": \"scatter\", \"uid\": \"e9d1b9f8-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90], \"type\": \"scatter\", \"uid\": \"e9d1bb4c-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180], \"type\": \"scatter\", \"uid\": \"e9d1bbe2-7527-11e9-8fe3-d33e8ca318a5\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270], \"type\": \"scatter\", \"uid\": \"e9d1bc64-7527-11e9-8fe3-d33e8ca318a5\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
