Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -744,7 +744,8 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    pass"
+    "    passdef output_at(list_of_terms, x_value):\n",
+    "#     outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))"
    ]
   },
   {
