--- a/index.ipynb
+++ b/index.ipynb
@@ -744,8 +744,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    passdef output_at(list_of_terms, x_value):\n",
-    "#     outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))"
+    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))"
    ]
   },
   {
