--- a/index.ipynb
+++ b/index.ipynb
@@ -864,7 +864,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return list(map(lambda te))"
+    "    return "
    ]
   },
   {
