--- a/index.ipynb
+++ b/index.ipynb
@@ -865,7 +865,7 @@
    "source": [
     "def term_df_dx(term):\n",
     "    output = []\n",
-    "    for term in list_of_terms:\n",
+    "    for ter in term:\n",
     "        constant = term[0]\n",
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
