--- a/index.ipynb
+++ b/index.ipynb
@@ -864,14 +864,8 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    output = []\n",
-    "    for ter in term:\n",
-    "        constant = term[0]\n",
-    "        x_exponent = term[1]\n",
-    "        y_exponent = term[2]\n",
-    "        constant*x_exponent   *y_value**y_exponent\n",
-    "        output.append(term_output)\n",
-    "    return sum(output)"
+    "    constant = term[0]\n",
+    "    return "
    ]
   },
   {
