--- a/index.ipynb
+++ b/index.ipynb
@@ -865,8 +865,8 @@
    "source": [
     "def term_df_dx(term):\n",
     "    constant = term[0]*term[1]\n",
-    "    exponent = term\n",
-    "    return "
+    "    exponent = term[1]-1\n",
+    "    return constant*exponent*term[]"
    ]
   },
   {
