Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -857,28 +857,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
     "    constant = term[0]*term[1]\n",
     "    exponent = term[1]-1\n",
-    "    return constant,exponent,term[2]"
+    "    return (constant,exponent,term[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "(8, 1, 1)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,11 +897,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, -1, 1)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y = (1, 0, 1)\n",
     "term_df_dx(y) # (0, -1, 1)"
@@ -930,7 +939,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    pass"
+    "    "
    ]
   },
   {
