--- a/index.ipynb
+++ b/index.ipynb
@@ -977,7 +977,9 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    constant= term[0]*term[]"
+    "    constant= term[0]*term[2]\n",
+    "    exponent= term[2]-1\n",
+    "    return"
    ]
   },
   {
